fix font and spacing

--- a/main.css
+++ b/main.css
@@ -18,7 +18,6 @@ body {
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
-  background-color: var(--dk-col);
   top: 0;
 }
 
@@ -30,7 +29,10 @@ body {
 }
 
 #main {
-  grid-template-rows: 100vh auto auto minmax(100vh, auto);
+  grid-template-rows: 100vh minmax(100vh, auto) minmax(100vh, auto) minmax(
+      100vh,
+      auto
+    );
   width: 100vw;
   display: grid;
   justify-content: center;
@@ -72,13 +74,15 @@ body {
   border-color: var(--lt-col);
 }
 
-.section {
+#about,
+#pricing,
+#signup {
   display: flex;
   flex-direction: column;
   width: 100%;
   justify-content: center;
   align-items: center;
-  padding-top: 5%;
+  padding: 5%;
 }
 
 #signupForm {
@@ -87,4 +91,10 @@ body {
   display: flex;
   flex-direction: column;
   row-gap: 15px;
+}
+
+@media (max-width: 750px) {
+  #main {
+    grid-template-rows: 100vh auto auto auto;
+  }
 }
